*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/jface_resources.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/jface_resources.htm
@@ -20,33 +20,30 @@ Many of the workbench extension points allow plug-ins to supply icons that can b
 <P >
 We've already seen several references to icons in the readme tool plug-in. Some of its icons are specified in the
 <b> plugin.xml</b> markup.</P>
-<font color='#4444CC'><pre>
-   &lt;extension
-      point=&quot;org.eclipse.ui.views&quot;&gt;
-      &lt;category 
-         id=&quot;org.eclipse.ui.examples.readmetool&quot;
-         name=&quot;&amp;amp;Readme&quot;&gt;
-      &lt;/category&gt;
-      &lt;view
-         id=&quot;org.eclipse.ui.examples.readmetool.views.SectionsView&quot;
-         name=&quot;Readme Sections&quot;
-         icon=&quot;icons/basic/view16/sections.gif&quot;
-         category=&quot;org.eclipse.ui.examples.readmetool&quot;
-         class=&quot;org.eclipse.ui.examples.readmetool.ReadmeSectionsView&quot;&gt;
-      &lt;/view&gt;
-   &lt;/extension&gt;
-</pre></font>
+<pre><font color="#4444CC">&lt;extension
+   point=&quot;org.eclipse.ui.views&quot;&gt;
+	&lt;category
+	   id=&quot;org.eclipse.ui.examples.readmetool&quot;
+	   name=&quot;%Views.category&quot;&gt;
+	&lt;/category&gt;
+	&lt;view
+	   id=&quot;org.eclipse.ui.examples.readmetool.views.SectionsView&quot;
+	   name=&quot;%Views.ReadmeSections&quot;
+	   <b>icon</b>=&quot;icons/view16/sections.gif&quot;
+	   category=&quot;org.eclipse.ui.examples.readmetool&quot;
+	   class=&quot;org.eclipse.ui.examples.readmetool.ReadmeSectionsView&quot;&gt;
+	&lt;/view&gt;
+&lt;/extension&gt;</font></pre>
 <P >
 We've also seen code that describes images on the fly. The following is from the readme tool's
 <b>ReadmeEditorActionBarContributor</b>.</P>
-<font color='#4444CC'><pre>
-   public ReadmeEditorActionBarContributor() {
-      ...
-      action1 = new EditorAction(&quot;&amp;Editor Action1&quot;);
-      action1.setToolTipText(&quot;Readme Editor Action1&quot;);
-      action1.setImageDescriptor(ReadmeImages.EDITOR_ACTION1_IMAGE);
-      ...
-   }
+<font color='#4444CC'><pre>public ReadmeEditorActionBarContributor() {
+      	...
+	action1 = new EditorAction(MessageUtil.getString(&quot;Editor_Action1&quot;));
+	action1.setToolTipText(MessageUtil.getString(&quot;Readme_Editor_Action1&quot;));
+<b>	action1.setDisabledImageDescriptor(ReadmeImages.EDITOR_ACTION1_IMAGE_DISABLE);
+	action1.setImageDescriptor(ReadmeImages.EDITOR_ACTION1_IMAGE_ENABLE);
+</b>	...
 </pre></font>
 <P >JFace provides the basic support classes that allow plug-ins to manage their icons and fonts without worrying about when the corresponding platform graphics objects
 are created and destroyed. These support classes are used directly by plug-ins as shown above, or indirectly when the workbench uses these classes to obtain images that are described in extension point markup.</P>
